
name:                linux-live-netinfo
version:             0.1.0.0
synopsis:            Provide updates on Linux network subsystem
description:         Provides real time updates on state of network neighbourhood (NICs, IPs, ARP table) of Linux system.
homepage:            github.com/vdorr/linux-live-netinfo
license:             MIT
license-file:        LICENSE
author:              vdorr
maintainer:          vdorr.package@gmail.com
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 7.10.3

source-repository head
  type:                 git
  location:             git://github.com/vdorr/linux-live-netinfo

executable netinfo
  main-is:             netinfo.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       linux-live-netinfo, ansi-terminal
                     , netlink == 1.1.1.0
                     , base >=4.8 && <4.10
                     , bytestring >=0.10 && <0.11
                     , cereal
                     , network >=2.6 && <2.7, unix >=2.7 && <2.8, containers >=0.5 && <0.6, stm >=2.4 && <2.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -fwarn-incomplete-patterns -fwarn-unused-binds -fwarn-unused-imports -fno-warn-tabs


library
  exposed-modules:     System.Linux.NetInfo, System.Linux.NetInfo.Internal
  -- other-modules:       
  other-extensions:    CPP, RecordWildCards
  build-depends:       netlink == 1.1.1.0
                     , base >=4.8 && <4.10
                     , bytestring >=0.10 && <0.11
                     , cereal
                     , network >=2.6 && <2.7, unix >=2.7 && <2.8, containers >=0.5 && <0.6, stm >=2.4 && <2.5
--FIXME estimate cereal version
--  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns -fwarn-unused-binds -fwarn-unused-imports -fno-warn-tabs


Test-Suite 1
  build-depends:       linux-live-netinfo
                     , ansi-terminal
                     , netlink == 1.1.1.0
                     , base >=4.8 && <4.10
                     , bytestring >=0.10 && <0.11
                     , cereal
                     , network >=2.6 && <2.7, unix >=2.7 && <2.8
                     , containers >=0.5 && <0.6
                     , stm >=2.4 && <2.5
                     , hspec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           test.hs
  ghc-options:       -fwarn-incomplete-patterns -fwarn-unused-binds -fwarn-unused-imports -fno-warn-tabs
  default-language:  Haskell2010

